# CPP-SIMPLE

./: .gitignore  CLAUDE.md  CMakeLists.txt  QWEN.md
data/: mesh_info.json  plot.py  u_momentum_coefficients.csv  v_momentum_coefficients.csv
docs/: rhie_chow_plan.md
src/: main.cpp  test.cpp  test.hpp
src/config/: simulationConfig.hpp
src/equation/: scalarEquation.cpp  scalarEquation.hpp
src/field/: boundaryField.cpp  boundaryField.hpp  fluidProperties.cpp  fluidProperties.hpp  massFluxField.cpp  massFluxField.hpp  scalarField.cpp  scalarField.hpp  vectorField.cpp  vectorField.hpp
src/grid/: structuredMesh.cpp  structuredMesh.hpp
utils/: formatter4eigen.h
